# ai-demo

./: .gitignore  README.md  pyproject.toml
agno_service/: pyproject.toml
agno_service/src/agno_service/: agent.py  main.py
api_service/: pyproject.toml
api_service/src/api_service/: main.py
csv/: load_yfinance.py
docker/: agno_service.Dockerfile  api_service.Dockerfile  ui_app.Dockerfile
k8s/: agno-service.yaml  api-service.yaml  namespace.yaml  ui-app.yaml
sql/: connect.sql
tests/: test_main.py
ui_app/: pyproject.toml
ui_app/src/ui_app/: app.py
