[project]
name = "ai-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=3.0.3",
    "yfinance>=1.5.1",
]

[project.scripts]
ai-demo = "ai_demo.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_demo"]

[dependency-groups]
dev = ["pytest>=8.0.0"]

[tool.uv.workspace]
members = ["agno_service", "api_service", "ui_app"]
