[project]
name = "agno-service"
version = "0.1.0"
description = "Agno agent middleware: answers NYC taxi questions via ClickHouse MCP tools"
requires-python = ">=3.11"
dependencies = [
    "agno>=1.5.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "mcp>=1.2.0",
    "anthropic>=0.40.0",
    "mcp-clickhouse>=0.4.0",
]

[project.scripts]
agno-service = "agno_service.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agno_service"]
