[project]
name = "ui-app"
version = "0.1.0"
description = "Streamlit UI: single prompt input, submits to api-service, shows the answer"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.38.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ui_app"]
